# gcal

./: .gitignore  .setup.py.swp  README.md  pyproject.toml  setup.20250423_212143.py
gcal/: main.py
